--- a/app/templates/base-etalab.html.twig
+++ b/app/templates/base-etalab.html.twig
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    {#
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tagline libérer les données sans effort et sur data.gouv.fr - template.data.gouv.fr</title>
+    <title>Aeris</title>
+    {#
     <link rel="stylesheet" href="{{ asset('build/app.css') }}">
     <!-- Search Engine -->
     <meta name="description" content="Tagline libérer les données sans effort et sur data.gouv.fr">
