--- a/app/templates/index.html.twig
+++ b/app/templates/index.html.twig
@@ -8,6 +8,13 @@
     <ul class="nav__links">
       <li><a href="#aeris-what">C'est quoi ?</a></li>
       <li><a href="#aeris-about">A propos</a></li>
+      <li>
+        {% if is_granted('ROLE_USER') %}
+        <a   href="{{ path('route_dashboard')}}"><button class="button">Accéder à mon espace</button></a>
+        {% else %}
+        <a class="button" href="{{ path('fos_user_security_login')}}">Accéder à mon espace</a>
+      </li>
+      {% endif %}
     </ul>
   </div>
 
