--- a/app/templates/inside/dashboard.html.twig
+++ b/app/templates/inside/dashboard.html.twig
@@ -1,4 +1,8 @@
 {% extends "base_inside.html.twig" %}
 {% block body %}
-dashboard
+  <section class="section">
+    <div class="container">
+      dashboard
+    </div>
+  </section>
 {% endblock %}
