--- a/app/templates/menu.html.twig
+++ b/app/templates/menu.html.twig
@@ -1,3 +1,13 @@
-<div>
-<a href="{{ path('route_dashboard') }}">Tableau de bord</a> | <a href="{{ path('route_declaration') }}">Faire une déclaration</a> | <a href="{{ path('fos_user_security_logout') }}">Me déconnecter</a>
-</div>
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <h1 class="title"><a class="navbar-item" href="{{ path('route_dashboard') }}">Aeris</a></h1>
+  </div>
+
+  <div class="navbar-menu">
+      <div class="navbar-end">
+          <div class="navbar-item"><a href="{{ path('route_dashboard') }}">Tableau de bord</a></div>
+          <div class="navbar-item"><a href="{{ path('route_declaration') }}">Faire une déclaration</a></div>
+          <div class="navbar-item"><a href="{{ path('fos_user_security_logout') }}">Me déconnecter</a></div>
+      </div>
+  </div>
+</nav>
