--- a/app/templates/inside/declaration.html.twig
+++ b/app/templates/inside/declaration.html.twig
@@ -1,5 +1,8 @@
 {% extends "base_inside.html.twig" %}
-
-{% block body%}
-declaration
+{% block body %}
+  <section class="section">
+    <div class="container">
+      declaration
+    </div>
+  </section>
 {% endblock %}
