included mailchimp newsletter

--- a/app/templates/index.html.twig
+++ b/app/templates/index.html.twig
@@ -45,15 +45,33 @@
         <li>Consulter la <a href="https://beta.gouv.fr/startup/aeris.html">fiche produit</a></li>
         <li>Contacter <a href="mailto:jacob.carbonel@beta.gouv.fr">l'équipe</a></li>
       </ul>
+
       </article>
     </div>
   </section>
+  <section class="section-color">
+    <h2 class="section__title">Newsletter</h2>
+      
+  <div id="mc_embed_signup">
+<form action="https://gouv.us17.list-manage.com/subscribe/post?u=207907f21fe7f8973fd617681&amp;id=9af5f5e851" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+  <label for="mce-EMAIL" style="color:#FFF">Enregistrez-vous à notre newsletter</label>
+  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="votre@email.com" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_207907f21fe7f8973fd617681_9af5f5e851" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Tenez-moi informé !" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
 
+<!--End mc_embed_signup-->
 
+  </section>
 
       
 <footer class="footer">
   <div class="container">
+    
     {#
     <div class="footer__logo">
       <img src="images/etalab.svg" alt="Logo Etalab">
