--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Aeris{% endblock %}</title>
         <link rel="stylesheet" href="{{ asset('build/app.css') }}">
+        <link rel="icon" type="image/png" href="/assets/images/favicons/android-chrome-192x192.png" />
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
