integrated the different screens

--- a/app/templates/base_inside.html.twig
+++ b/app/templates/base_inside.html.twig
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Aeris{% endblock %}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
-    {% block stylesheets %}{% endblock %}
+    {% block stylesheets %}
+    {% endblock %}
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </head>
   <body>
   <section class="navigation">
     <div class="container">
-      
         {% include 'menu.html.twig' %}
     </div>
   </section>
