--- a/app/templates/menu.html.twig
+++ b/app/templates/menu.html.twig
@@ -5,8 +5,9 @@
 
   <div class="navbar-menu">
       <div class="navbar-end">
+          <div class="navbar-item"><a href="{{ path('route_declaration') }}">Déclarer</a></div>
           <div class="navbar-item"><a href="{{ path('route_dashboard') }}">Tableau de bord</a></div>
-          <div class="navbar-item"><a href="{{ path('route_declaration') }}">Faire une déclaration</a></div>
+          <div class="navbar-item"><a href="{{ path('route_history') }}">Historique</a></div>
           <div class="navbar-item"><a href="{{ path('fos_user_security_logout') }}">Me déconnecter</a></div>
       </div>
   </div>
