--- a/app/templates/inside/cr2.html
+++ b/app/templates/inside/cr2.html
@@ -1,8 +1,9 @@
-{% extends "base_inside.html.twig" %}
-
-
-{% block stylesheets %}
-<style type="text/css">
+<!DOCTYPE html>
+<html>
+<head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title></title>
+    <style type="text/css">
 table {
     border-collapse:collapse;
     width:100%;
@@ -28,12 +29,8 @@ h3 {
     background-color: #66ccff;
 }
     </style>
-{% endblock %}
-
-{% block body %}
-  <section class="section">
-    <div class="container">
-
+</head>
+<body>
 
     <h2>Ligne 1</h2>
     <h3>Compteurs par paramètres suivis</h3>
@@ -255,6 +252,5 @@ h3 {
     </table>
     <p><strong>Commentaires : </strong> </p>
 
-    </div>
-  </section>
-{% endblock %}
+</body>
+</html>
