--- a/app/templates/inside/historique.html.twig
+++ b/app/templates/inside/historique.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
   <section class="section">
     <div class="container">
-      historique
+      <h2>historique</h2>
 
       <a href="{{ path('route_cr') }}">compte rendu</a>
     </div>
