--- a/app/templates/user/declaration.html.twig
+++ b/app/templates/user/declaration.html.twig
@@ -1,8 +1,8 @@
-{% extends "base_inside.html.twig" %}
+{% extends "common/base_inside.html.twig" %}
 {% block body %}
   <section class="section">
     <div class="container">
-      dashboard
+      declaration
     </div>
   </section>
 {% endblock %}
