--- a/app/templates/common/base_inside.html.twig
+++ b/app/templates/common/base_inside.html.twig
@@ -12,7 +12,7 @@
   <body>
   <section class="navigation">
     <div class="container">
-        {% include 'menu.html.twig' %}
+        {% include 'common/menu.html.twig' %}
     </div>
   </section>
   
