--- a/app/templates/static/homepage.html.twig
+++ b/app/templates/static/homepage.html.twig
@@ -1,4 +1,4 @@
-{% extends "base.html.twig" %}
+{% extends "common/base.html.twig" %}
 {% block body%}
   <div class="nav__container">
     <a class="nav__link" href="/">
