--- a/app/templates/user/historique.html.twig
+++ b/app/templates/user/historique.html.twig
@@ -1,4 +1,4 @@
-{% extends "base_inside.html.twig" %}
+{% extends "common/base_inside.html.twig" %}
 {% block body %}
   <section class="section">
     <div class="container">
