--- a/app/templates/common/base.html.twig
+++ b/app/templates/common/base.html.twig
@@ -8,6 +8,24 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+      <div class="nav__container">
+        <a class="nav__link" href="/">
+          <img class="nav__logo" src="{{ asset('build/static/images/logo-betagouv.png') }}" alt="Accueil d'Aeris">
+        </a><div class="logo-title">Aeris</div>
+
+        <ul class="nav__links">
+          <li><a href="{{ path('route_index')}}#aeris-what">C'est quoi ?</a></li>
+          <li><a href="{{ path('route_index')}}#aeris-about">A propos</a></li>
+          <li>
+            {% if is_granted('ROLE_USER') %}
+            <a href="{{ path('route_dashboard')}}"><button class="button">Accéder à mon espace</button></a>
+            {% else %}
+            <a href="{{ path('fos_user_security_login')}}">Accéder à mon espace</a>
+          </li>
+          {% endif %}
+          
+        </ul>
+      </div>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
         <script src="{{ asset('build/app.js') }}"></script>
