--- a/app/templates/user/dashboard.html.twig
+++ b/app/templates/user/dashboard.html.twig
@@ -2,7 +2,8 @@
 {% block body %}
   <section class="section">
     <div class="container">
-      dashboard
+      <h2>Dashboard</h2>
+      <p>Bienvenue <strong>{{ app.user.username }} </strong></p>
     </div>
   </section>
 {% endblock %}
