different display of the data

--- a/app/templates/user/dashboard.html.twig
+++ b/app/templates/user/dashboard.html.twig
@@ -4,6 +4,7 @@
     <div class="container">
       <h2>Dashboard</h2>
       <p>Bienvenue <strong>{{ app.user.username }} </strong></p>
+      {{ app.user.incinerateurs | length }}
     </div>
   </section>
 {% endblock %}
