added navigation to an incinerateur

--- a/app/templates/common/menu.html.twig
+++ b/app/templates/common/menu.html.twig
@@ -6,18 +6,31 @@
   <div class="navbar-menu">
       <div class="navbar-end">
           <div class="navbar-item">
-            <a href="{{ path('route_declaration') }}">
-              <i class="fas fa-comment"></i> Déclarer</a>
-          </div>
-          <div class="navbar-item">
             <a href="{{ path('route_dashboard') }}">
-              <i class="fas fa-chart-line"></i> Tableau de bord</a>
+              <i class="fas fa-chart-line"></i> Tableau de bord
+            </a>
           </div>
+          {% if is_granted('ROLE_INSPECTEUR') %}
+           <div class="navbar-item">
+            <a href="{{ path('route_liste_incinerateurs') }}">
+              <i class="fas fa-list-ul"></i> Incinérateurs
+            </a>
+          </div>  
+          {% elseif is_granted('ROLE_PROPRIETAIRE') %}
+          <div class="navbar-item">
+            <a href="{{ path('route_declaration') }}">
+              <i class="fas fa-comment"></i> Déclarer
+            </a>
+          </div>
+          {#
           <div class="navbar-item">
             <a href="{{ path('route_history') }}">
               <i class="fas fa-calendar-alt"></i> Historique
             </a>
           </div>
+          #}
+          {% endif %}
+
           <div class="navbar-item">
             <a href="{{ path('fos_user_security_logout') }}">
               <i class="fas fa-sign-out-alt"></i> Me déconnecter
