--- a/app/templates/user/historique.html.twig
+++ b/app/templates/user/historique.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
   <section class="section">
     <div class="container">
-      <h2>historique</h2>
+      <h2>Historique de <strong>{{incinerateur.name}}</strong></h2>
 
       <a href="{{ path('route_cr') }}">compte rendu</a>
     </div>
