--- a/app/templates/user/declaration.html.twig
+++ b/app/templates/user/declaration.html.twig
@@ -2,7 +2,8 @@
 {% block body %}
   <section class="section">
     <div class="container">
-      declaration
+        <h1>Declaration</h1>
+        <h1>TODO: Rien n'est fait ici</h1>
     </div>
   </section>
 {% endblock %}
