--- a/app/templates/user/dashboard.html.twig
+++ b/app/templates/user/dashboard.html.twig
@@ -16,7 +16,7 @@
         </ul>
       {% endif %}
 
-      <h1>TODO: Rien n'est fait ici</h1>
+      <h1>TODO: ajout de graphes</h1>
     </div>
   </section>
 {% endblock %}
