--- a/app/templates/owner/declaration.html.twig
+++ b/app/templates/owner/declaration.html.twig
@@ -26,7 +26,18 @@
         {{ form_widget(form_mesure_dioxine) }}
         {{ form_end(form_mesure_dioxine) }}
 
-        <h3 class="title is-3">Déclaration déchets</h3>
+        <h3 class="title is-3">Déclaration volume de déchets incinérés</h3>
+
+<article class="message is-info">
+  <div class="message-body">
+    -> Faire ressortir la hiérarchie d'information
+  </div>
+</article>
+
+        {{ form_start(form_declaration_dechets) }}
+        {{ form_errors(form_declaration_dechets) }}
+        {{ form_widget(form_declaration_dechets) }}
+        {{ form_end(form_declaration_dechets) }}
 
         <h3 class="title is-3">Déclaration rejets dans l'air</h3>
 <article class="message is-info">
