--- a/app/templates/owner/declaration.html.twig
+++ b/app/templates/owner/declaration.html.twig
@@ -5,70 +5,90 @@
   <section class="section">
     <div class="container">
         <h2 class="title is-2">Effectuer une déclaration</h2>
-        
+        {#
         <a class="button is-primary" href="{{ path('route_download_template') }}">Télécharger un modèle de déclaration</a>
 <article class="message is-info">
   <div class="message-body">
     -> ce formulaire va être découpé en plusieurs fichiers
   </div>
 </article>
+        #}
 
-        <h3 class="title is-3">Mesure de dioxines</h3>
+        <h3 class="title is-3">Volume de déchets incinérés</h3>
 
-<article class="message is-info">
-  <div class="message-body">
-    -> un formulaire par ligne existante dans l'incinérateur
-  </div>
-</article>
-
-        {{ form_start(form_mesure_dioxine) }}
-        {{ form_errors(form_mesure_dioxine) }}
-        {{ form_widget(form_mesure_dioxine) }}
-        {{ form_end(form_mesure_dioxine) }}
-
-        <h3 class="title is-3">Déclaration volume de déchets incinérés</h3>
-
-<article class="message is-info">
-  <div class="message-body">
-    -> Faire ressortir la hiérarchie d'information
-  </div>
-</article>
+        <article class="message is-info">
+          <div class="message-body">
+            -> Faire ressortir la hiérarchie d'information
+          </div>
+        </article>
 
         {{ form_start(form_declaration_dechets) }}
         {{ form_errors(form_declaration_dechets) }}
         {{ form_widget(form_declaration_dechets) }}
         {{ form_end(form_declaration_dechets) }}
 
-        <h3 class="title is-3">Déclaration rejets dans l'air</h3>
-<article class="message is-info">
-  <div class="message-body">
-    Chaque ligne est séparée en 5 catégories 
-    <ul>
-        <li> - mesures de flux </li>
-        <li> - mesures de concentration</li>
-        <li> - mesures de température</li>
-        <li> - compteurs par paramètres</li>
-        <li> - compteurs de dépassement par dispositif</li>
-    </ul>
-    <p>Pour chacune de ces catégories (sauf les dépassement par dispositif), on peut télécharger un fichier CSV de modèle, que l'on upload pour déclarer ses relevés
-    </p>
-    <p>
-      Pour les dépassement par dispositifs, on propose un formulaire web où on peut ajouter les dépassements, cf modèle sur Trello. Si pas de dépassement, proposer une case à cocher "Je certifie qu'il n'y a pas de dépassement"
-    </p>
-  </div>
-</article>
-        <h3 class="title is-3">Déclaration fonctionnement des lignes</h3>
-<article class="message is-info">
-  <div class="message-body">
-    -> un formulaire par ligne existante dans l'incinérateur
-  </div>
-</article>
-        {{ form_start(form_declaration_fonctionnement_ligne) }}
-        {{ form_errors(form_declaration_fonctionnement_ligne) }}
-        {{ form_widget(form_declaration_fonctionnement_ligne) }}
-        {{ form_end(form_declaration_fonctionnement_ligne) }}
+        
+        <h3 class="title is-3">Ligne 1</h3>
+          <article class="message is-info">
+            <div class="message-body">
+              -> une section de ce genre par ligne existante dans l'incinérateur
+            </div>
+          </article>
 
-        <h3 class="title is-3">Déclaration générale</h3>
+
+          <h4 class="title is-4">Durées de fonctionnement</h4>
+
+          {{ form_start(form_declaration_fonctionnement_ligne) }}
+          {{ form_errors(form_declaration_fonctionnement_ligne) }}
+          {{ form_widget(form_declaration_fonctionnement_ligne) }}
+          {{ form_end(form_declaration_fonctionnement_ligne) }}
+
+          <h4 class="title is-4">Mesure de dioxines</h4>
+
+          {{ form_start(form_mesure_dioxine) }}
+          {{ form_errors(form_mesure_dioxine) }}
+          {{ form_widget(form_mesure_dioxine) }}
+          {{ form_end(form_mesure_dioxine) }}
+
+          <h4 class="title is-4">Rejets dans l'air</h4>
+          <article class="message is-info">
+            <div class="message-body">
+              Cette sous-section est divisée en 5 catégories 
+              <ul>
+                  <li> - mesures de flux </li>
+                  <li> - mesures de concentration</li>
+                  <li> - mesures de température</li>
+                  <li> - compteurs par paramètres</li>
+                  <li> - compteurs de dépassement par dispositif</li>
+              </ul>
+              <p>Pour chacune de ces catégories (sauf les dépassement par dispositif), on peut télécharger un fichier CSV de modèle, que l'on upload pour déclarer ses relevés
+              </p>
+            </div>
+          </article>
+
+            <h5 class="title is-5">Mesures de flux</h5>
+              <a class="button is-primary" href="#">Télécharger un modèle de déclaration des mesures de flux</a>
+
+            <h5 class="title is-5">Mesures de concentration</h5>
+              <a class="button is-primary" href="#">Télécharger un modèle de déclaration des mesures de concentration</a>
+            <h5 class="title is-5">Mesures de température</h5>
+              <a class="button is-primary" href="#">Télécharger un modèle de déclaration des mesures de température</a>
+
+            <h5 class="title is-5">Compteurs de dépassement par paramètres</h5>
+              <a class="button is-primary" href="#">Télécharger un modèle de déclaration des compteurs par paramètres</a>
+
+            <h5 class="title is-5">Compteurs de dépassement par dispositif</h5>
+            <article class="message is-info">
+              <div class="message-body">
+                <p>
+                  Pour les dépassement par dispositifs, on propose un formulaire web où on peut ajouter les dépassements, cf modèle sur Trello. Si pas de dépassement, proposer une case à cocher "Je certifie qu'il n'y a pas de dépassement"
+                </p>
+              </div>
+            </article>
+
+
+
+        <h3 class="title is-3">Conclusion</h4>
         {{ form_start(form) }}
         {{ form_widget(form) }}
             <input type="submit" />
