aggregating data for rejections in the air

--- a/app/templates/owner/declaration.html.twig
+++ b/app/templates/owner/declaration.html.twig
@@ -26,7 +26,6 @@
         {{ form_errors(form_declaration_dechets) }}
         {{ form_widget(form_declaration_dechets) }}
         {{ form_end(form_declaration_dechets) }}
-
         
         <h3 class="title is-3">Ligne 1</h3>
           <article class="message is-info">
@@ -34,7 +33,6 @@
               -> une section de ce genre par ligne existante dans l'incinérateur
             </div>
           </article>
-
 
           <h4 class="title is-4">Durées de fonctionnement</h4>
 
@@ -66,13 +64,8 @@
             </div>
           </article>
 
-            <h5 class="title is-5">Mesures de flux</h5>
-              <a class="button is-primary" href="#">Télécharger un modèle de déclaration des mesures de flux</a>
-
-            <h5 class="title is-5">Mesures de concentration</h5>
-              <a class="button is-primary" href="#">Télécharger un modèle de déclaration des mesures de concentration</a>
-            <h5 class="title is-5">Mesures de température</h5>
-              <a class="button is-primary" href="#">Télécharger un modèle de déclaration des mesures de température</a>
+            <h5 class="title is-5">Mesures de flux, concentration, température</h5>
+              <a class="button is-primary" href="#">Télécharger un modèle de déclaration des mesures</a>
 
             <h5 class="title is-5">Compteurs de dépassement par paramètres</h5>
               <a class="button is-primary" href="#">Télécharger un modèle de déclaration des compteurs par paramètres</a>
