--- a/app/templates/user/compte-rendu-declaration.html.twig
+++ b/app/templates/user/compte-rendu-declaration.html.twig
@@ -13,7 +13,7 @@
 {% block body %}
   <section class="section">
     <div class="container">
-    <h2 class="title is-2">Déclaration</h2>
+    <h2 class="title is-2">Déclaration du {{ declaration.createdAt|date('d/m/Y') }} </h2>
 
     <div class="recap-declaration-dechets">
         <h3 class="title is-3">Déchets</h3>
